--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.1",
+    "react-error-boundary": "^3.1.4",
+    "react-hook-form": "^7.43.2",
+    "react-hook-form-mui": "^5.15.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
