--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=development-server/api
 REACT_APP_API_SECRET_KEY=12345
+REACT_APP_YMAPS_API_KEY=ce390fba-82c2-4c2c-9ee4-6b6cdba90ff7
