--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.11",
     "antd": "^5.3.0",
     "antd-img-crop": "^4.11.0",
+    "axios": "^1.3.6",
     "env-cmd": "^10.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
