--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/colors": "^7.0.0",
     "@ant-design/icons": "^5.0.1",
     "@hookform/resolvers": "^2.9.11",
     "@pbe/react-yandex-maps": "^1.2.2",
