--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=https://fastapi.findyourplaceapi.ru/
+REACT_APP_API_URL=http://158.160.106.20:8000/
 REACT_APP_API_SECRET_KEY=12345
 REACT_APP_YMAPS_API_KEY=ce390fba-82c2-4c2c-9ee4-6b6cdba90ff7
